TEST_PROGRAMS/VALID/theo_szymkowiak/valid1.min
# BUNCH OF STATEMENTS

var x: int;
var y: float;
var name: string;

name = "theo";

read x;

y = 1.0;

if x then
	if y then
		x = y + 2;
	endif
endif

while x do
	print name;
done

