TEST_PROGRAMS/INVALID/dongkyu_kim/incorrect1.min
# incorrect 1

var x: float;
var y: int;

x = 00.5;

if x then
    y = 1;
else
    y = 0;
endif

print y;

